fix switch flickering on popup opening

--- a/src/popup.css
+++ b/src/popup.css
@@ -5,3 +5,7 @@ label {
 .main {
   padding: .5rem 1rem;
 }
+
+.hidden {
+  display: none;
+}
